--- a/src/static/css/links.css
+++ b/src/static/css/links.css
@@ -5,11 +5,6 @@
   column-gap: 16px;
   row-gap: 12px;
   color: var(--link-color);
-  font-family: "Jost", sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 0.15rem;
-  font-size: 0.75rem;
-  font-weight: bold;
   margin: 0 auto;
   margin-top: 96px;
   margin-bottom: 96px;
